# filterimg

./: .gitignore  CMakeLists.txt
movie_recommender/: .env.example  requirements.txt
movie_recommender/app/: __init__.py  config.py  data_loader.py  svd_model.py
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/filters/: filter.cpp  filter.h
src/threading/: taskmanager.cpp  taskmanager.h
src/widgets/: compareviewer.cpp  compareviewer.h  filtercontrolspanel.cpp  filtercontrolspanel.h  imageviewer.cpp  imageviewer.h  progresspanel.cpp  progresspanel.h  splitcomparewidget.cpp  splitcomparewidget.h
